--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
 	},
 	"require":{
 		"php":">=5.3",
-		"contao/core-bundle":"^3.2 || ^4.4",
+		"contao/core-bundle":"^3.2 || ~4.4",
 		"contao-community-alliance/composer-plugin": "^2.4 || ^3.0",
-		"isotope/isotope-core":"^2.0"
+		"isotope/isotope-core":"^2.4"
 	},
 	"autoload": {
 		"psr-0": {
