--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
 	"license":"CC-BY-SA-4.0",
 	"authors":[
 		{
-			"name":"RobMarshall",
-			"homepage":"http://www.rsmarshall.com"
+			"name":"RobMarshall"
 		}
 	],
 	"support":{
