--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,8 @@
 		"forum":"https://community.contao.org/de/showthread.php?49734"
 	},
 	"require":{
-		"php":">=5.3",
-		"contao/core-bundle":"^3.2 || ~4.4",
-		"contao-community-alliance/composer-plugin": "^2.4 || ^3.0",
+		"php": "~5.4 || ~7.0",
+		"contao/core-bundle": "^3.5.2 || ~4.1",
 		"isotope/isotope-core":"^2.4"
 	},
 	"autoload": {
